# symlink-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  config.example.json  manifest.example.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
scripts/: build.py  deploy.py  format_skyrim_batch.py  maintain_repo.py
src/symlink_manager/: __init__.py  __main__.py  adopt.py  cli.py  config.py  deploy.py  formatting.py  maintain.py  pipeline.py  profiles.py  status.py
src/symlink_manager/formatters/: __init__.py  base.py  identity.py  skyrim_batch.py
tests/: conftest.py  test_adopt.py  test_cli.py  test_config.py  test_deploy.py  test_e2e.py  test_format_skyrim_batch.py  test_formatter_properties.py  test_formatting.py  test_main.py  test_maintain.py  test_maintain_repo.py  test_pipeline.py  test_profiles.py  test_skyrim_batch.py  test_status.py
