[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symlink-manager"
version = "0.1.0"
description = "Idempotent symlink deployment engine for atomic config, batch, and dotfiles."
readme = "README.md"
requires-python = ">=3.10"   # structural pattern matching (match statement)
dependencies = []            # zero third-party runtime dependencies (stdlib only)

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
symlink-build = "symlink_manager.cli:build_main"
symlink-deploy = "symlink_manager.cli:deploy_main"
symlink-format = "symlink_manager.cli:format_main"
symlink-audit = "symlink_manager.cli:maintain_main"

[tool.hatch.build.targets.wheel]
packages = ["src/symlink_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
